--- a/boatrace-web/package.json
+++ b/boatrace-web/package.json
@@ -11,10 +11,12 @@
     "@material-ui/core": "^4.11.0",
     "next": "9.5.3",
     "react": "16.13.1",
-    "react-dom": "16.13.1"
+    "react-dom": "16.13.1",
+    "recharts": "^1.8.5"
   },
   "devDependencies": {
     "@types/node": "^14.11.2",
+    "@types/recharts": "^1.8.15",
     "typescript": "^4.0.3"
   }
 }
