--- a/boatrace-web/package.json
+++ b/boatrace-web/package.json
@@ -9,9 +9,11 @@
   },
   "dependencies": {
     "@material-ui/core": "^4.11.0",
+    "@material-ui/icons": "^4.9.1",
     "next": "9.5.3",
     "react": "16.13.1",
     "react-dom": "16.13.1",
+    "react-file-reader": "^1.1.4",
     "recharts": "^1.8.5"
   },
   "devDependencies": {
