--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "next": "9.5.3",
     "react": "16.13.1",
     "react-dom": "16.13.1",
-    "swr": "^0.3.5"
+    "swr": "^0.3.5",
+    "recharts": "^1.8.5"
   },
   "devDependencies": {
     "@types/node": "^14.11.2",
